# RealGibberLink-Secure-air-gapped-short-range-comm-for-robots-drones

./: Access Badge Use Cases  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REQUIREMENTS.md  SECURITY.md  audit_report.md
Documentations/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  examples.md  getting-started.md
Use Cases/: Use Case Access Badge.md  Use Case Personal Identity and Access Control for Smart Cities.md  Use Case Secure Access for Critical Infrastructure.md  Use Case Secure Environmental Monitoring and Data Collection.md  Use Case Secure Firmware Updates for Embedded Systems.md  Use Case Secure Voting and Election Systems.md  Use Case Secure Warehouse Operations.md
android-app/: gradlew.bat  local.properties  settings.gradle.kts
examples/: drone_formation_heavy_lift_demo.rs  drone_mission_python_example.py  drone_mission_transfer_demo.rs  integration_error_handling_demo.py
rgibberlink-core/: Cargo.toml  README.md
rgibberlink-core/benches/: protocol_benchmarks.rs  visual_benchmarks.rs
rgibberlink-core/src/: audio.rs  audit.rs  channel_validator.rs  crypto.rs  drone_station.rs  fallback.rs  laser.rs  lib.rs  logging.rs  mission.rs  mission_transfer.rs  optical_ecc.rs  performance_monitor.rs  protocol.rs  python_bindings.rs  range_detector.rs  security.rs  ultrasonic_beam.rs  visual.rs  weather.rs
rgibberlink-core/src/audit/: compliance.rs  events.rs  mod.rs
rgibberlink-core/src/laser/: alignment.rs  control.rs  error.rs  hardware.rs  mod.rs  modulation.rs  safety.rs
rgibberlink-core/src/python_bindings/: crypto.rs
rgibberlink-core/src/security/: mod.rs
tests/: requirements.txt  run_tests.py  test_audio.py  (+8 more)
(+24 files in other folders)
