[package]
name = "rgibberlink-core"
version = "0.3.0"
edition = "2021"
description = "Rust core library for GibberLink protocol with security enhancements"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
bincode = "1.3"
hex = "0.4"
thiserror = "1.0"
crc32fast = "1.3"
zeroize = { version = "1.6", features = ["zeroize_derive"] }
criterion = { version = "0.5", features = ["html_reports"] }

# Placeholder dependencies for short-range features
# ggwave = { version = "0.1", optional = true }
qrcode = { version = "0.13", optional = true }
reed-solomon-erasure = "6.0"

# Long-range extensions (placeholders - implement when available)
# signal-processing = { version = "0.1", optional = true }
# beamforming = { version = "0.2", optional = true }
# optical-ecc = { version = "0.3", optional = true }
# hal = { version = "0.4", features = ["laser", "parametric-audio"], optional = true }

# Python bindings
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }
hkdf = "0.12.4"

[features]
default = ["short-range"]
short-range = ["qrcode"]
# long-range = ["signal-processing", "beamforming", "optical-ecc", "hal"]  # Enable when dependencies are available
python = ["pyo3"]
# android = ["long-range"]  # Enable when long-range is available

[lib]
name = "gibberlink_core"
crate-type = ["cdylib", "rlib"]
